compiler/kernc_cli/tests/soundness/run-pass/projection/chained_bound_projection_with_assoc_equality_normalizes.rn
// class: projection-normalization
// source: a chained generic projection should normalize when the intermediate trait bound fixes the final associated result
// exit: 0

type Step = trait {
    type Mid;
};

type Finish = trait {
    type Out;
};

type Shell = struct {};
type X = struct {};

impl X: Step {
    type Mid = Shell;
}

impl Shell: Finish {
    type Out = i32;
}

fn project[T](value: T) T.Step.Mid.Finish[Out = i32].Out
    where T: Step,
          T.Step.Mid: Finish[Out = i32],
{
    _ = value;
    return 7;
}

fn main() i32 {
    let value = project(X.{});
    return if (value == 7) { 0 } else { 1 };
}
