compiler/kernc_cli/tests/soundness/reject/projection/mutually_recursive_associated_projection_cycle.rn
// class: projection-cycle
// stderr: recursive associated type projection cycle detected
// stderr: projection cycle: X.A.Out -> X.B.Out -> X.A.Out

type A = trait {
    type Out;
};

type B = trait {
    type Out;
};

type X = struct {};

impl X: A {
    type Out = X.B.Out;
}

impl X: B {
    type Out = X.A.Out;
}

fn project(value: X) X.A.Out {
    let _ = value;
    return X.{};
}

fn main() i32 {
    let _ = project(X.{});
    return 0;
}
